# fomosto-qssp

./: .gitignore  .travis.yml  Makefile.am  README  README.md  configure.ac
doc/examples/: qssp2010-example.inp  qssp2010-me-a.inp
python/: Makefile.am  qssp.py
src/: Makefile.am  banddpasss.f  brunewvlet.f  butterworth.f  caxcb.f  d2dfit.f  disazi.f  moments.f  qpdifmat0.f  qpdifmat2.f  qpdifmat4.f  qpdifmat6.f  qpdifmatl.f  qpdifmats.f  qpdlegendre.f  qpfftinv.f  qpgetinp.f  qpglobal-f.h  qpglobal-t.h  qpglobal.h  qpgrnspec.f  qplegendre.f  qpmain.f  qppsvkern.f  qppsvkerng.f  qpqmodel.f  qpshkern.f  qpsmat.f  qpsmat0.f  qpsmatc.f  qpsprop.f  qpsprop0.f  qpsprop1.f  qpspropg.f  qpspropg0.f  qpspropg1.f  qpstart0.f  qpstart4.f  qpstart6.f  qpsublayer.f  (+15 more)
