bin_PROGRAMS = qssp
qssp_SOURCES = brunewvlet.f butterworth.f caxcb.f cdsvd500.f cmemcpy.f disazi.f four1.f moments.f pemain.f qpdifmat2.f qpdifmat4.f qpdifmat6.f qpdlegendre.f qpfftinv.f qpgetinp.f qpgrnspec.f qplegendre.f qpmain.f qppsvkern.f qppsvkerng.f qpqmodel.f qpshkern.f qpsmat0.f qpsmatc.f qpsmat.f qpsprop0.f qpsprop1.f qpsprop.f qpspropg0.f qpspropg1.f qpspropg.f qpstart0.f qpstart4.f qpstart6.f qpsublayer.f qptmat.f qptprop1.f qptprop.f qpwvint.f ruku.f spbdphj.f spbdphy.f spbjh.f spbphj.f spbphy.f spbpsj.f spbpsy.f taper.f qpglobal.h skip_comments.f

